2004-07-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-vcs to extras.

2004-07-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-doc-utils to extras.

2004-07-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgtop has been silently
	branched.

2004-07-22  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Remove magicdev. Its development is
	discontinued.

2004-07-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix broken pot file name for
	evolution-exchange.

2004-07-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix broken pot file name for gdm2.

2004-07-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: zenity has been branched.

2004-07-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Yelp maintainer says
	yelp gnome-2-6 branch will be used for GNOME 2.8.

2004-07-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added eggcups to extras.

2004-07-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved vino to proposed.

2004-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-keyring-manager to proposed.

2004-07-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added criawips to extras.

2004-07-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the planner branch.

2004-07-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added jumpnbumpmenu to extras.

2004-07-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Hydrogen was renamed evolution-jescs.

2004-06-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added evolution-brainread.

2004-06-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-applets-locations.

2004-06-23  Christian Rose  <menthos@menthos.com>