@@ -254,6 +254,17 @@
       </component>
     </version>
   </module>
+  <module name="divifund">
+    <version release="gnome-2.8">
+      <component name="divifund" dir="divifund" group="extras">
+        <podir dir="po"/>
+        <potname name="untitled.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="drgeo">
     <version release="gnome-2.8">
       <component name="drgeo" dir="drgeo" group="extras">
