@@ -1,3 +1,7 @@
+2004-07-26  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added divifund to extras.
+
 2004-07-25  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added nautilus-vcs to extras.
